--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 <li> <a href="https://nic.eu.org/">域名申请系统（如果很急的话别用要等蛮久的 我现在还没等到（qwq）</a> </li> 
 <li> <a href="https://space.bilibili.com/"你们都懂的（坏笑） </a> </li>
 <li> <a href="https://space.bilibili.com/320854223/"bilibili主页 </a> </li>
-<li> <a href="https://www.bilibili.com/video/BV1GJ411x7h7/"> <div style="color: red> 不要点进去！什么都没有 </div> </a>  </li> 
+<li> <a href="https://www.bilibili.com/video/BV1GJ411x7h7/">  不要点进去！什么都没有 </div> </a>  </li> 
 <li> <a href="https://thispersondoesnotexist.com/"> 大脸照片（这应该是最早的ai照片了吧）</a> </li>
 <p>先放这么多吧 ：-o </p>
 <p> :-) </p>
-<p>#include <stdio.h>
-int main() 
-{
-	printf("Hello World!");   
-	return 0;
-}</p>
+<p>#include <stdio.h> </p>
+<p>int main() </p>
+<p>{</p>
+<p>	printf("Hello World!");  </p> 
+<p>	return 0;</p>
+<p>}</p>
 <p> floating science 2016提（wo）供（shi）技（bei）术（po）支（de）持 </p>
