--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</style>
     </head>
 <body>
-	<div style="color: Dark Blue; font-size: 22px;">科尔的半公开网站！</div>   
+	<div style="color: blue; font-size: 22px;">科尔的半公开网站！</div>   
                <p>----我----是----分----界----线----</p>
 	<div style="color: blue; font-size: 22px;">投诉：floatingscienceco@outlook.com</div> 
 </body>
@@ -18,9 +18,9 @@
 <p>学生党....测试好玩用的（^-^）</p>
 <p>我是中转站阿巴阿巴阿巴阿巴</p>
 <li> <a href="https://nic.eu.org/">域名申请系统（如果很急的话别用要等蛮久的 我现在还没等到（qwq）</a> </li> 
-<li> <a href="https://space.bilibili.com/"你们都懂的（坏笑） </a> </li>
-<li> <a href="https://space.bilibili.com/320854223/"bilibili主页 </a> </li>
-<li> <a href="https://www.bilibili.com/video/BV1GJ411x7h7/">  不要点进去！什么都没有 </div> </a>  </li> 
+<li> <a href="https://space.bilibili.com/">你们都懂的（坏笑） </a> </li>
+<li> <a href="https://space.bilibili.com/320854223/"> bilibili主页 </a> </li>
+<li> <a href="https://www.bilibili.com/video/BV1GJ411x7h7/">  不要点进去！什么都没有  </a>  </li> 
 <li> <a href="https://thispersondoesnotexist.com/"> 大脸照片（这应该是最早的ai照片了吧）</a> </li>
 <p>先放这么多吧 ：-o </p>
 <p> :-) </p>
